@@ -3,7 +3,6 @@ package io.openems.edge.app.heat;
 import java.util.EnumMap;
 import java.util.List;
 import java.util.TreeMap;
-import java.util.stream.Collectors;
 
 import org.osgi.service.cm.ConfigurationAdmin;
 import org.osgi.service.component.ComponentContext;
@@ -17,9 +16,11 @@ import io.openems.common.exceptions.OpenemsError.OpenemsNamedException;
 import io.openems.common.function.ThrowingTriFunction;
 import io.openems.common.session.Language;
 import io.openems.common.types.EdgeConfig;
+import io.openems.common.utils.EnumUtils;
 import io.openems.common.utils.JsonUtils;
 import io.openems.edge.app.heat.HeatingElement.Property;
 import io.openems.edge.common.component.ComponentManager;
+import io.openems.edge.core.appmanager.AbstractEnumOpenemsApp;
 import io.openems.edge.core.appmanager.AbstractOpenemsApp;
 import io.openems.edge.core.appmanager.AppAssistant;
 import io.openems.edge.core.appmanager.AppConfiguration;
@@ -28,6 +29,8 @@ import io.openems.edge.core.appmanager.ComponentUtil;
 import io.openems.edge.core.appmanager.ConfigurationTarget;
 import io.openems.edge.core.appmanager.DefaultEnum;
 import io.openems.edge.core.appmanager.JsonFormlyUtil;
+import io.openems.edge.core.appmanager.JsonFormlyUtil.InputBuilder.Type;
+import io.openems.edge.core.appmanager.Nameable;
 import io.openems.edge.core.appmanager.OpenemsApp;
 import io.openems.edge.core.appmanager.OpenemsAppCardinality;
 import io.openems.edge.core.appmanager.OpenemsAppCategory;
@@ -50,7 +53,8 @@ import io.openems.edge.core.appmanager.validator.ValidatorConfig;
     	"CTRL_IO_HEATING_ELEMENT_ID": "ctrlIoHeatingElement0",
     	"OUTPUT_CHANNEL_PHASE_L1": "io0/Relay1",
     	"OUTPUT_CHANNEL_PHASE_L2": "io0/Relay2",
-    	"OUTPUT_CHANNEL_PHASE_L3": "io0/Relay3"
+    	"OUTPUT_CHANNEL_PHASE_L3": "io0/Relay3",
+    	"POWER_PER_PHASE": 2000
     },
     "dependencies": [
     	{
@@ -65,9 +69,9 @@ import io.openems.edge.core.appmanager.validator.ValidatorConfig;
  * </pre>
  */
 @org.osgi.service.component.annotations.Component(name = "App.Heat.HeatingElement")
-public class HeatingElement extends AbstractOpenemsApp<Property> implements OpenemsApp {
+public class HeatingElement extends AbstractEnumOpenemsApp<Property> implements OpenemsApp {
 
-	public static enum Property implements DefaultEnum {
+	public static enum Property implements DefaultEnum, Nameable {
 		// Component-IDs
 		CTRL_IO_HEATING_ELEMENT_ID("ctrlIoHeatingElement0"), //
 		// Properties
@@ -75,6 +79,7 @@ public class HeatingElement extends AbstractOpenemsApp<Property> implements Open
 		OUTPUT_CHANNEL_PHASE_L1("io0/Relay1"), //
 		OUTPUT_CHANNEL_PHASE_L2("io0/Relay2"), //
 		OUTPUT_CHANNEL_PHASE_L3("io0/Relay3"), //
+		POWER_PER_PHASE("2000") //
 		;
 
 		private final String defaultValue;
@@ -107,11 +112,15 @@ public class HeatingElement extends AbstractOpenemsApp<Property> implements Open
 			final var outputChannelPhaseL2 = this.getValueOrDefault(p, Property.OUTPUT_CHANNEL_PHASE_L2);
 			final var outputChannelPhaseL3 = this.getValueOrDefault(p, Property.OUTPUT_CHANNEL_PHASE_L3);
 
+			final var powerPerPhase = EnumUtils.getAsOptionalInt(p, Property.POWER_PER_PHASE).orElse(2000);
+
 			var components = Lists.newArrayList(//
 					new EdgeConfig.Component(heatingElementId, alias, "Controller.IO.HeatingElement",
-							JsonUtils.buildJsonObject().addProperty("outputChannelPhaseL1", outputChannelPhaseL1) //
+							JsonUtils.buildJsonObject() //
+									.addProperty("outputChannelPhaseL1", outputChannelPhaseL1) //
 									.addProperty("outputChannelPhaseL2", outputChannelPhaseL2) //
 									.addProperty("outputChannelPhaseL3", outputChannelPhaseL3) //
+									.addProperty("powerPerPhase", powerPerPhase) //
 									.build()) //
 			);
 
@@ -146,7 +155,7 @@ public class HeatingElement extends AbstractOpenemsApp<Property> implements Open
 				new int[] { 4, 5, 6 });
 		var options = this.componentUtil.getAllRelays() //
 				.stream().map(r -> r.relays).flatMap(List::stream) //
-				.collect(Collectors.toList());
+				.toList();
 		return AppAssistant.create(this.getName(language)) //
 				.fields(JsonUtils.buildJsonArray() //
 						.add(JsonFormlyUtil.buildSelect(Property.OUTPUT_CHANNEL_PHASE_L1) //
@@ -154,24 +163,34 @@ public class HeatingElement extends AbstractOpenemsApp<Property> implements Open
 								.onlyIf(relays != null, t -> t.setDefaultValue(relays[0])) //
 								.setLabel(TranslationUtil.getTranslation(bundle,
 										this.getAppId() + ".outputChannelPhaseL1.label"))
-								.setDescription(TranslationUtil.getTranslation(bundle,
-										this.getAppId() + ".outputChannelPhaseL1.description"))
+								.setDescription(TranslationUtil.getTranslation(bundle, //
+										"App.Heat.outputChannel.description")) //
 								.build())
 						.add(JsonFormlyUtil.buildSelect(Property.OUTPUT_CHANNEL_PHASE_L2) //
 								.setOptions(options) //
 								.onlyIf(relays != null, t -> t.setDefaultValue(relays[1])) //
 								.setLabel(TranslationUtil.getTranslation(bundle,
 										this.getAppId() + ".outputChannelPhaseL2.label"))
-								.setDescription(TranslationUtil.getTranslation(bundle,
-										this.getAppId() + ".outputChannelPhaseL2.description"))
+								.setDescription(TranslationUtil.getTranslation(bundle, //
+										"App.Heat.outputChannel.description")) //
 								.build())
 						.add(JsonFormlyUtil.buildSelect(Property.OUTPUT_CHANNEL_PHASE_L3) //
 								.setOptions(options) //
 								.onlyIf(relays != null, t -> t.setDefaultValue(relays[2])) //
 								.setLabel(TranslationUtil.getTranslation(bundle,
 										this.getAppId() + ".outputChannelPhaseL3.label"))
+								.setDescription(TranslationUtil.getTranslation(bundle, //
+										"App.Heat.outputChannel.description")) //
+								.build())
+						.add(JsonFormlyUtil.buildInput(Property.POWER_PER_PHASE) //
+								.setLabel(TranslationUtil.getTranslation(bundle,
+										this.getAppId() + ".powerPerPhase.label"))
 								.setDescription(TranslationUtil.getTranslation(bundle,
-										this.getAppId() + ".outputChannelPhaseL3.description"))
+										this.getAppId() + ".powerPerPhase.description"))
+								.setInputType(Type.NUMBER) //
+								.setMin(0) //
+								.setDefaultValue(2000) //
+								.isRequired(true) //
 								.build())
 						.build())
 				.build();
@@ -184,7 +203,7 @@ public class HeatingElement extends AbstractOpenemsApp<Property> implements Open
 	}
 
 	@Override
-	public OpenemsAppCategory[] getCategorys() {
+	public OpenemsAppCategory[] getCategories() {
 		return new OpenemsAppCategory[] { OpenemsAppCategory.HEAT };
 	}
 
